--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <script src="http://localhost:8098"></script>
+    <script src="http://localhost:8098"></script><!-- Delete before production, it's for Vue DevTools-->
   </head>
 
   <body>
