--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>ViolaIgua-favicon.png">
+    <link rel="icon" href="<%= BASE_URL %>ViolaIgua-favicon-1.png">
     <title>Data Exchange: Vue project by Yanka_Incode</title>
     <script src="http://localhost:8098"></script><!-- Delete before production, it's for Vue DevTools-->
   </head>
