--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>ViolaIgua-favicon-1.png">
-    <title>Data Exchange: Vue project by Yanka_Incode</title>
+    <title>Vue project ✦ by Yanka_Incode</title>
     <script src="http://localhost:8098"></script><!-- Delete before production, it's for Vue DevTools-->
   </head>
 
   <body class="body-container">
     <noscript>
-      <strong>We're sorry but 'Data Exchange: Vue project by Yanka_Incode' doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but 'Vue project ✦ by Yanka_Incode' doesn't work properly without JavaScript enabled. Please, enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
   </body>
