--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <body class="body-container">
     <noscript>
-      <strong>We're sorry but 'Vue project ✦ by Yanka_Incode' doesn't work properly without JavaScript enabled. Please, enable it to continue.</strong>
+      <strong>We're sorry but 'Vue project by Yanka_Incode' doesn't work properly without JavaScript enabled. Please, enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
   </body>
