Corrected project name, title, description, code spacing, word-break style implementation. Added vue.config.js

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>ViolaIgua-favicon-1.png">
-    <title>Vue project ✦ by Yanka_Incode</title>
+    <title>Vue field experience ✦ by Yanka_InCode</title>
   </head>
 
   <body class="body-container">
     <noscript>
-      <strong>We're sorry but 'Vue project by Yanka_Incode' doesn't work properly without JavaScript enabled. Please, enable it to continue.</strong>
+      <strong>We're sorry but 'Vue field experience by Yanka_InCode' doesn't work properly without JavaScript enabled. Please, enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
   </body>
