Corrected: @media min-width to common 1024px, app naming. Added: back-img change for lower screens (orig from 2048px), linear appearance of back-img, 1 initial back-color for body.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>Vue field experience ✦ by Yanka_InCode</title>
   </head>
 
-  <body class="body-container">
+  <body class="body-container" style="background-color: Ivory;">
     <noscript>
       <strong>We're sorry but 'Vue field experience by Yanka_InCode' doesn't work properly without JavaScript enabled. Please, enable it to continue.</strong>
     </noscript>
